--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-leaflet": "^5.0.0",
     "react-loading-skeleton": "^3.5.0",
     "react-router": "^7.13.0",
+    "react-tooltip": "^5.30.0",
     "styled-components": "^6.3.9",
     "sweetalert2": "^11.26.18",
     "swiper": "^12.1.1",
